<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <TextView
            style="@style/DisplayCalculationsLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="20dp"
            android:text="@string/capital"/>
        <TextView
            android:id="@+id/tvDisplayCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agency_tax"
            style="@style/DisplayCalculationsLine"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:text=" - "/>
        <TextView
            android:id="@+id/tvDispalyAgencyTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_pay_sum"
            style="@style/DisplayCalculationsLine"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:text=" - "/>
        <TextView
            android:id="@+id/tvDiplayStartPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_owner_rights2"
            style="@style/DisplayCalculationsLine"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:text=" - "/>
        <TextView
            android:id="@+id/tvDisplayOwnerPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_estimate_estate"
            style="@style/DisplayCalculationsLine"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:text=" - "/>
        <TextView
            android:id="@+id/tvDisplayEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_insurance"
            style="@style/DisplayCalculationsLine"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:text=" - "/>
        <TextView
            android:id="@+id/tvDisplayInsurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_pays"
            style="@style/DisplayCalculationsLine"
            android:paddingRight="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:text=" - "/>
        <TextView
            android:id="@+id/tvDisplayExtraPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/redPrice"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp"
            android:paddingRight="30dp"/>
        <TextView
            android:id="@+id/tvDiplayTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="10 000"/>
    </LinearLayout>

</LinearLayout>